--- a/_modules/index.html
+++ b/_modules/index.html
@@ -49,10 +49,12 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="debug.html">debug</a></li>
+<li><a href="disseminate.html">disseminate</a></li>
 <li><a href="docopt.html">docopt</a></li>
 <li><a href="globals.html">globals</a></li>
 <li><a href="merge.html">merge</a></li>
 <li><a href="mpt.html">mpt</a></li>
+<li><a href="prepare.html">prepare</a></li>
 <li><a href="xmlMerge.html">xmlMerge</a></li>
 <li><a href="xmlProcess.html">xmlProcess</a></li>
 </ul>
