--- a/mpt.html
+++ b/mpt.html
@@ -27,7 +27,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="top" title="MPT 0.0.1 documentation" href="index.html" />
-    <link rel="next" title="xmlProcess module" href="xmlProcess.html" />
+    <link rel="next" title="xmlProcess module" href="process.html" />
     <link rel="prev" title="Main Program (mpt)" href="index.html" /> 
   </head>
   <body role="document">
@@ -41,7 +41,7 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="xmlProcess.html" title="xmlProcess module"
+          <a href="process.html" title="xmlProcess module"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="index.html" title="Main Program (mpt)"
@@ -485,7 +485,7 @@ certain file</p>
   <p class="topless"><a href="index.html"
                         title="previous chapter">Main Program (mpt)</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="xmlProcess.html"
+  <p class="topless"><a href="process.html"
                         title="next chapter">xmlProcess module</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
@@ -518,7 +518,7 @@ certain file</p>
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="xmlProcess.html" title="xmlProcess module"
+          <a href="process.html" title="xmlProcess module"
              >next</a> |</li>
         <li class="right" >
           <a href="index.html" title="Main Program (mpt)"
