--- a/_modules/mpt.html
+++ b/_modules/mpt.html
@@ -664,7 +664,6 @@
         <span class="n">t_path</span> <span class="o">=</span> <span class="p">[</span><span class="n">p</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;path&#39;</span><span class="p">),</span> <span class="n">uid</span><span class="p">]</span> <span class="o">+</span> <span class="p">[</span><span class="s1">&#39;nlm&#39;</span><span class="p">]</span> <span class="k">if</span> <span class="n">p_name</span> <span class="o">==</span> <span class="s1">&#39;metypeset&#39;</span> <span class="k">else</span> <span class="p">[</span><span class="n">p</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;path&#39;</span><span class="p">),</span> <span class="n">uid</span><span class="p">]</span>
         <span class="n">out_type</span> <span class="o">=</span> <span class="n">p</span><span class="p">[</span><span class="s1">&#39;typesetters&#39;</span><span class="p">][</span><span class="n">p_id</span><span class="p">][</span><span class="s1">&#39;out_type&#39;</span><span class="p">]</span>
         <span class="n">project_path</span> <span class="o">=</span> <span class="p">[</span><span class="n">p</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;path&#39;</span><span class="p">),</span><span class="n">p</span><span class="p">[</span><span class="s1">&#39;name&#39;</span><span class="p">],</span> <span class="bp">self</span><span class="o">.</span><span class="n">current_result</span><span class="p">,</span> <span class="n">p_id</span> <span class="o">+</span> <span class="s1">&#39;_&#39;</span> <span class="o">+</span> <span class="n">p_name</span><span class="p">,</span><span class="n">out_type</span><span class="p">]</span>
-        <span class="nb">print</span> <span class="mi">100</span> <span class="o">*</span> <span class="s1">&#39;-&#39;</span>
 
         <span class="k">if</span> <span class="n">p</span><span class="p">[</span><span class="s1">&#39;typesetters&#39;</span><span class="p">][</span><span class="n">p_id</span><span class="p">]</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;merge&#39;</span><span class="p">):</span>
             <span class="n">f_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">create_merged_file</span><span class="p">(</span><span class="n">p</span><span class="p">,</span> <span class="n">p_id</span><span class="p">,</span> <span class="n">project_path</span><span class="p">,</span> <span class="n">t_path</span><span class="p">)</span>
@@ -744,8 +743,8 @@
 <span class="sd">    run</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">pre_process_instance</span> <span class="o">=</span> <span class="n">MPT</span><span class="p">()</span>
-    <span class="n">pre_process_instance</span><span class="o">.</span><span class="n">run</span><span class="p">()</span></div>
+    <span class="n">process_instance</span> <span class="o">=</span> <span class="n">MPT</span><span class="p">()</span>
+    <span class="n">process_instance</span><span class="o">.</span><span class="n">run</span><span class="p">()</span></div>
 
 
 <span class="k">if</span> <span class="n">__name__</span> <span class="o">==</span> <span class="s1">&#39;__main__&#39;</span><span class="p">:</span>
