--- a/static/editors/configure/index.html
+++ b/static/editors/configure/index.html
@@ -1,163 +1,102 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Recursive JSON Editor Example</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
 
-    <!-- Foundation CSS framework (Bootstrap and jQueryUI also supported) -->
-    <link rel='stylesheet' href='//cdn.jsdelivr.net/bootstrap/3.2.0/css/bootstrap.css'>
-    <!-- Font Awesome icons (Bootstrap, Foundation, and jQueryUI also supported) -->
-    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css'>
+  <title>Configuration</title>
 
-    <link rel='stylesheet' href='//cdn.jsdelivr.net/sceditor/1.4.3/jquery.sceditor.default.min.css'>
-    <link rel='stylesheet' href='//cdn.jsdelivr.net/sceditor/1.4.3/themes/modern.min.css'>
-    <script src='//cdn.jsdelivr.net/jquery/2.1.1/jquery.min.js'></script>
-    <script src='//cdn.jsdelivr.net/sceditor/1.4.3/jquery.sceditor.min.js'></script>
-    <script src='//cdn.jsdelivr.net/sceditor/1.4.3/plugins/xhtml.js'></script>
+  <!-- Bootstrap core CSS -->
+  <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="js/jsoneditor.min.js"></script>
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/navbar.css" rel="stylesheet">
+
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+
+
+
+  <![endif]-->
 </head>
+
 <body>
-<div class='container'>
-    <div class='row' style='padding-bottom: 15px;'>
-        <div class='col-md-12'>
-            <h1>Add configuration</h1>
 
-        </div>
-    </div>
-    <div class='row' style='padding-bottom: 15px;'>
-        <div class='col-md-12'>
-            <button id='submit' class='btn btn-info'>Submit (console.log)</button>
-            <button id='restore' class='btn btn-info'>Restore to Default</button>
-            <button id='enable_disable' class='btn btn-info'>Disable/Enable Form</button>
-            <span id='valid_indicator' class='label label-success'></span>
-        </div>
-    </div>
-    <div class='row'>
-        <div class='col-md-12'>
-            <div id='editor_holder'></div>
-        </div>
-    </div>
-</div>
+<div class="container">
 
-<script>
-    JSONEditor.defaults.theme = 'bootstrap3';
-    JSONEditor.defaults.iconlib = 'fontawesome4';
-    //JSONEditor.plugins.sceditor.style = "//cdn.jsdelivr.net/sceditor/1.4.3/jquery.sceditor.default.min.css";
+  <!-- Static navbar -->
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Project name</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+          <li><a href="../navbar-static-top/">Static top</a></li>
+          <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div><!--/.container-fluid -->
+  </nav>
 
-    // Initialize the editor
-    var editor = new JSONEditor(document.getElementById('editor_holder'),{
-        // The schema for the editor
-        schema: {
-            title: "Person",
-            $ref: "#/definitions/person",
-            definitions: {
-                person: {
-                    type: "object",
-                    id: "person",
-                    // The object will start with only these properties
-                    defaultProperties: [
-                        "fname",
-                        "lname",
-                        "bestFriend",
-                        "coworkers"
-                    ],
-                    patternProperties: {
-                      // Self-referntial schema in patternProperties
-                      "^cousin_[0-9]+$": {
-                        $ref: "#/definitions/person"
-                      }
-                    },
-                    properties: {
-                        fname: {
-                            title: "first name",
-                            type: "string"
-                        },
-                        lname: {
-                            title: "last name",
-                            type: "string"
-                        },
-                        bestFriend: {
-                          title: "best friend",
-                          oneOf: [
-                            {
-                              title: "none",
-                              type: "null"
-                            },
-                            // Self-referential schema as 2nd choice in oneOf
-                            {
-                              title: "person",
-                              $ref: "#/definitions/person"
-                            }
-                          ]
-                        },
-                        coworkers: {
-                          type: "array",
-                          // Self-referential schema in array items
-                          items: {
-                            title: "Coworker",
-                            $ref: "#/definitions/person"
-                          }
-                        },
-                        // Self-referential schemas in non-default properties
-                        mother: {
-                          title: "mother",
-                          $ref: "#/definitions/person"
-                        }
-                    }
-                },
-                year: {
-                    type: "integer",
-                    pattern: "^[0-9]{4}$",
-                    minimum: 1900,
-                    maximum: 2100
-                }
-            }
-        }
-    });
+  <!-- Main component for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <form></form>
+    <div id="res" class="alert"></div>
 
-    // Hook up the submit button to log to the console
-    document.getElementById('submit').addEventListener('click',function() {
-        // Get the value from the editor
-        console.log(editor.getValue());
-    });
+  </div>
 
-    // Hook up the Restore to Default button
-    document.getElementById('restore').addEventListener('click',function() {
-        editor.setValue(starting_value);
-    });
+</div> <!-- /container -->
 
-    // Hook up the enable/disable button
-    document.getElementById('enable_disable').addEventListener('click',function() {
-        // Enable form
-        if(!editor.isEnabled()) {
-            editor.enable();
-        }
-        // Disable form
-        else {
-            editor.disable();
-        }
-    });
 
-    // Hook up the validation indicator to update its
-    // status whenever the editor changes
-    editor.on('change',function() {
-        // Get an array of errors from the validator
-        var errors = editor.validate();
-
-        var indicator = document.getElementById('valid_indicator');
-
-        // Not valid
-        if(errors.length) {
-            indicator.className = 'label label-danger'
-            indicator.textContent = "not valid";
-        }
-        // Valid
-        else {
-            indicator.className = 'label label-success'
-            indicator.textContent = "valid";
-        }
-    });
-</script>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!--script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script-->
+<script src="js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="js/ie10-viewport-bug-workaround.js"></script>
+<script type="text/javascript" src="js/underscore.js"></script>
+<script type="text/javascript" src="js/jsv.js"></script>
+<script type="text/javascript" src="js/jsonform.js"></script>
+<script type="text/javascript" src="js/configuration.js"></script>
 </body>
 </html>
